# vim: set noexpandtab:

2013-02-08 Steve
	* Added Mllll method and corresponding isZ for 3lep and 4lep
	* Added option to hasZ to check for mlll and mllll in Z window
		* off by default, of course

2013-02-05 Steve
	* Cleaned up TrilTrigLogic
	* Added printFreq flag to SusyNtAna, so event printing frequency can be controlled
	  independently from the debug level
	* Cleaned up getEventWeightFixed
	* Updated default lumi to A-L in getEventWeight
	* Added effSF to tau class, although we won't be using it yet
	* Tagging SusyNtuple-00-00-46

2013-01-29 Serhan Mete <amete@cern.ch>
	* Update SusyNtuple/scripts/install.sh

2013-01-27 Steve
	* Added errXsec to Event class
	* Tagging SusyNtuple-00-00-45

2013-01-26 Steve
	* Tagging SusyNtuple-00-00-44

2013-01-25 Serhan Mete <amete@cern.ch>
	* Added some helper functions for the truth analysis.
	* Need to think through what should be moved under SusyNtTools.[cxx/h]
	* A         Root/SusyNtTruthAna.cxx
	* A         util/SusyTruthTest.cxx
	* A         SusyNtuple/SusyNtTruthAna.h

2013-01-25 Steve
	* Added constant for A-L lumi

2013-01-23 Steve
	* Added pileup weight for period A-E (HCP). 
	  Default pileup weight will now use full 2012 data.

2013-01-23 Serhan Mete <amete@cern.ch>
	* Set the truth branches active

2013-01-21 Serhan Mete <amete@cern.ch>
	* Added the structure for the new truth classes, namely TruthParticle, TruthJet and TrutMet
	* Currently not being written out in SusyNt since not filled yet. The affected files are listed below
	* M       Root/LinkDef.h
	* M       Root/SusyNt.cxx
	* M       Root/SusyNtObject.cxx
	* M       SusyNtuple/SusyNtObject.h
	* M       SusyNtuple/SusyNt.h
	* M       SusyNtuple/SusyDefs.h

2013-01-21 Steve
	* Updated DataPeriod enum
	* Tagging SusyNtuple-00-00-43

2013-01-21 Serhan Mete <amete@cern.ch>
	* SusyNtuple/SusyDefs.h: Added missing comma on L319

2013-01-20 Steve
	* Added EF_2mu8_EFxe40wMu_tclcw trigger

2013-01-17 Steve